@@ -21,5 +21,7 @@ parameters:
     app.mail.address:           support@symfony2-template.dev
     app.mail.sender_name:       Support Team
 
+    app.users.default_group:    Users
+
     # development settings
     dev.mailer.delivery_to:     me@symfony2-template.dev
