@@ -14,6 +14,7 @@ v 1.4.0 (unreleased)
   - added command to send registration confirmation reminders.
   - added fixture for testing unconfirmed users.
   - added french translation catalogues.
+  - added support for adding confirmed users to a default group.
 
 v 1.3.0 (unreleased)
   - fixed an issue with executing migrations / fixtures even if none existed
